# vo-python-docx

./: README.md  README.rst  setup.cfg  setup.py
.github/workflows/: action_ci.yml  action_deploy_package.yml  action_lint_markdown.yml  action_lint_python.yml  action_release.yml
docs/: conf.py
docs/dev/analysis/features/table/: table-borders.rst
docx/: __init__.py  blkcntnr.py  borders.py  compat.py  document.py  package.py  section.py  settings.py  shape.py  table.py
docx/enum/: dml.py  fields.py  section.py  table.py
docx/image/: __init__.py  png.py
docx/opc/: compat.py  coreprops.py  customxml.py  package.py  packuri.py  part.py  rel.py
docx/opc/parts/: coreprops.py  custom_xml.py
docx/oxml/: __init__.py  bookmark.py  coreprops.py  customxml.py  document.py  math.py  ns.py  numbering.py  section.py  shape.py  simpletypes.py  styles.py  table.py  xmlchemy.py
docx/oxml/text/: font.py  paragraph.py  parfmt.py  run.py
docx/parts/: document.py  image.py  numbering.py  settings.py  styles.py
docx/styles/: __init__.py  latent.py  style.py  styles.py
docx/text/: font.py  math.py  paragraph.py  parfmt.py  run.py  tabstops.py
features/steps/: coreprops.py  document.py  font.py  parfmt.py  section.py  settings.py  table.py
tests/: test_api.py  test_blkcntnr.py  test_document.py  test_enum.py  test_package.py  test_section.py  test_shape.py  test_shared.py  test_table.py
tests/dml/: test_color.py
tests/image/: test_bmp.py  test_gif.py  test_helpers.py  test_image.py  test_jpeg.py  test_png.py  test_tiff.py
tests/opc/: test_coreprops.py  test_oxml.py  test_package.py  test_part.py  test_phys_pkg.py  test_pkgreader.py  test_pkgwriter.py  test_rel.py
tests/opc/parts/: test_coreprops.py
tests/oxml/: test_styles.py  test_table.py  test_xmlchemy.py
tests/oxml/text/: test_run.py
tests/parts/: test_document.py  test_image.py  test_settings.py
tests/styles/: test_latent.py  test_style.py  test_styles.py
tests/text/: test_font.py  test_paragraph.py  test_parfmt.py  test_run.py  test_tabstops.py
tests/unitutil/: cxml.py  mock.py
